# web-crawler_top_words

./: README.md  pyproject.toml  web_crawler.py  wordcloud_wc.py
docs/: poetry.md
